<!--
  ~ Copyright (c) 2021 Pedro Albuquerque Santos.
  ~
  ~ This file is part of YanuX Scavenger.
  ~
  ~ YanuX Scavenger is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ YanuX Scavenger is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with YanuX Scavenger. If not, see <https://www.gnu.org/licenses/gpl.html>
  -->

<resources>
    <string name="app_name">YanuX Scavenger</string>

    <string name="title_activity_main">Welcome</string>
    <string name="title_activity_audio">Audio</string>
    <string name="title_activity_beacons">Beacons</string>
    <string name="title_activity_bluetooth_classic">Bluetooth Classic</string>
    <string name="title_activity_bluetooth_le">Bluetooth Low Energy</string>
    <string name="title_activity_kotlin">Kotlin</string>
    <string name="title_activity_nearby_connections">Nearby Connections</string>
    <string name="title_activity_nearby_messages">Nearby Messages</string>
    <string name="title_activity_sensors">Sensors</string>
    <string name="title_activity_wifi">Wi-Fi</string>
    <string name="title_activity_preferences">Preferences</string>

    <string name="action_audio">Audio</string>
    <string name="action_beacons">Beacons</string>
    <string name="action_bluetooth_classic">Bluetooth Classic</string>
    <string name="action_bluetooth_le">Bluetooth Low Energy</string>
    <string name="action_nearby_connections">Nearby Connections</string>
    <string name="action_nearby_messages">Nearby Messages</string>
    <string name="action_sensors">Sensors</string>
    <string name="action_wifi">Wi-Fi</string>
    <string name="action_kotlin_activity">Kotlin Activity</string>
    <string name="action_preferences">Preferences</string>

    <string name="no_ui_activity">This Activity has no UI. All the magic happens in the Logcat.</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="on_off">On/Off</string>
    <string name="off_on">Off/On</string>

    <string name="permission_rationale_storage_directory">Please select where you want the application to store its files.</string>

    <string name="audio_tone_cycle">Tone Cycle</string>
    <string name="audio_tone_frequency0">Frequency 0</string>
    <string name="audio_tone_frequency1">Frequency 1</string>
    <string name="audio_tone_frequency_units">Hz</string>
    <string name="audio_tone_duration">Duration</string>
    <string name="audio_tone_duration_units">ms</string>
    <string name="audio_tone_interval">Interval</string>
    <string name="audio_tone_interval_units">ms</string>
    <string name="audio_tone_play">Play</string>
    <string name="audio_tone_stop">Stop</string>
    <string name="audio_tone_record_start">Start Recording</string>
    <string name="audio_tone_record_stop">Stop Recording</string>
    <string name="audio_tone_record_filename">Recording Filename</string>
    <string name="audio_tone_record_filename_default">audio.wav</string>

    <string name="beacons_list">Beacons</string>
    <string name="beacons_ranging_elapsed_time">Elapsed time</string>
    <string name="beacons_logging">Beacon Logging</string>
    <string name="beacons_log_filename">Log Filename</string>
    <string name="beacons_log_filename_default">beacons.json</string>
    <string name="beacons_log_time">Logging Time (ms)</string>
    <string name="beacon_scanning_not_supported">Beacon scanning is not supported.</string>

    <string name="bluetooth_enabled">Thank you for enabling Bluetooth.</string>
    <string name="bluetooth_not_enabled">You haven\'t enabled Bluetooth. The application will not be able to use Bluetooth to improve your experience.</string>
    <string name="bluetooth_not_supported">Your device does not support Bluetooth.</string>
    <string name="bluetooth_le_not_available">Bluetooth Low Energy is not available.</string>

    <string name="bluetooth_discoverability_enabled">Thank you for enabling Bluetooth Discoverability.</string>
    <string name="bluetooth_discoverability_not_enabled">You haven\'t enabled Bluetooth Discoverability. The system will not be able to detect your device\'s presence to improve your experience.</string>

    <string name="bluetooth_name">Name</string>
    <string name="bluetooth_address">Address</string>
    <string name="bluetooth_discovery_elapsed_time">Elapsed time</string>
    <string name="bluetooth_devices">Bluetooth Devices</string>

    <string name="bluetooth_le_name">Name</string>
    <string name="bluetooth_le_address">Address</string>
    <string name="bluetooth_le_discovery_elapsed_time">Elapsed time</string>
    <string name="bluetooth_le_devices">Bluetooth Low Energy Devices</string>

    <string name="nearby_connection_user_nickname">User Nickname</string>
    <string name="nearby_connection_advertising">Advertising</string>
    <string name="nearby_connection_discovery">Discovery</string>

    <string name="select_sensor">Select sensor</string>
    <string name="unsupported_sensor">Unsupported sensor</string>
    <string name="sensor_accuracy">Accuracy</string>
    <string name="sensor_values">Values</string>
    <string name="timestamp">Timestamp</string>

    <string name="wifi_connection_info">Connection Info</string>
    <string name="wifi_dhcp_info">DHCP Info</string>
    <string name="wifi_access_points">Access Points</string>
    <string name="wifi_scan_always_available_enabled">Thank you for allowing Wi-Fi scanning to be always available.</string>
    <string name="wifi_scan_always_available_not_enabled">You haven\'t enabled Wi-Fi scanning to be always enable. The application will have to forcefully enable Wi-Fi.</string>
    <string name="wifi_elapsed_time">Elapsed Time</string>
    <string name="wifi_supports_rtt">This device supports Wi-Fi RTT</string>
    <string name="wifi_not_supports_rtt">"This device does not support Wi-Fi RTT"</string>


    <string name="log">Log</string>
    <string name="log_settings">Log Settings</string>
    <string name="log_name">Log Name</string>
    <string name="log_samples">Number of Samples</string>
    <string name="log_start">Start Logging</string>
    <string name="log_sample_counter">Samples</string>

    <!-- Preferences -->
    <string name="preferences_category_persistent_service">Persistent service</string>
    <string name="preferences_title_allow_persistent_service">Allow persistent service</string>
    <string name="preferences_title_allow_zeroconf">Allow zero-configuration networking</string>

    <string name="preferences_category_device">Device</string>
    <string name="preferences_title_device_name">Device Name</string>
    <string name="preferences_default_device_name">Android</string>
    <string name="preferences_title_device_uuid">Device UUID</string>

    <string name="preferences_category_beacon_scanning">Beacon scanning</string>
    <string name="preferences_title_beacon_scan">Beacon Scan</string>
    <string name="preferences_title_beacon_scan_realtime_updates">Realtime Updates</string>
    <string name="preferences_title_beacon_matcher_parameters_uuid">Beacon Matcher UUID</string>
    <string name="preferences_default_beacon_matcher_parameters_uuid">113069EC-6E64-4BD3-6810-DE01B36E8A3E</string>
    <string name="preferences_title_beacon_matcher_parameters_major">Beacon Matcher Major</string>
    <string name="preferences_default_beacon_matcher_parameters_major">-1</string>
    <string name="preferences_title_beacon_matcher_parameters_minor">Beacon Matcher Minor</string>
    <string name="preferences_default_beacon_matcher_parameters_minor">-1</string>

    <string name="preferences_category_beacon_advertising">Beacon advertising</string>
    <string name="preferences_title_beacon_advertise">Beacon Advertise</string>
    <string name="preferences_title_beacon_advertiser_parameters_uuid">Beacon Advertiser UUID</string>
    <string name="preferences_default_beacon_advertiser_parameters_uuid">113069EC-6E64-4BD3-6810-DE01B36E8A3E</string>
    <string name="preferences_title_beacon_advertiser_parameters_major">Beacon Advertiser Major</string>
    <string name="preferences_title_beacon_advertiser_parameters_minor">Beacon Advertiser Minor</string>
    <string name="preferences_title_beacon_advertiser_power_level">Beacon Advertiser Power Level</string>
    <string name="preferences_beacon_advertiser_power_level_label_high">High</string>
    <string name="preferences_beacon_advertiser_power_level_label_medium">Medium</string>
    <string name="preferences_beacon_advertiser_power_level_label_low">Low</string>
    <string name="preferences_beacon_advertiser_power_level_label_ultra_low">Ultra Low</string>
    <string name="preferences_beacon_advertiser_power_level_value_high">HIGH</string>
    <string name="preferences_beacon_advertiser_power_level_value_medium">MEDIUM</string>
    <string name="preferences_beacon_advertiser_power_level_value_low">LOW</string>
    <string name="preferences_beacon_advertiser_power_level_value_ultra_low">ULTRA_LOW</string>
    <string name="preferences_title_beacons_refresh_interval">Beacons Refresh Interval</string>
    <string name="preferences_title_beacons_inactivity_timer">Beacons Inactivity Timer</string>

    <string name="preferences_category_http_server">HTTP Server</string>
    <string name="preferences_title_http_server_port">HTTP Server Port</string>

    <string name="preferences_category_yanux_auth">YanuX Auth</string>
    <string name="preferences_title_yanux_auth_oauth2_authorization_server_url">OAuth 2.0 Authorization Server URL</string>
    <string name="preferences_default_yanux_auth_oauth2_authorization_server_url">https://yanux-auth.herokuapp.com/</string>

    <string name="preferences_title_yanux_auth_client_id">Client ID</string>
    <string name="preferences_default_yanux_auth_client_id">yanux-mobile-client</string>
    <string name="preferences_title_yanux_auth_client_secret">Client Secret</string>
    <string name="preferences_default_yanux_auth_client_secret">topsecret_client_secret</string>
    <string name="preferences_title_yanux_auth_access_token">Access Token</string>
    <string name="preferences_title_yanux_auth_refresh_token">Refresh Token</string>
    <string name="preferences_title_yanux_auth_redirect_uri">Redirect URI</string>
    <string name="preferences_default_yanux_auth_redirect_uri">yanux://auth/redirect</string>

    <string name="preferences_category_yanux_broker">YanuX Broker</string>
    <string name="preferences_title_yanux_broker_url">URL</string>
    <string name="preferences_default_yanux_broker_url">https://yanux-broker.herokuapp.com/</string>

    <!-- Notifications -->
    <string name="notication_action_disable_persistent_service">Disable persistent service</string>
</resources>
