<!--
  ~ Copyright (c) 2016 Pedro Albuquerque Santos.
  ~
  ~ This file is part of YanuX Scavenger.
  ~
  ~ YanuX Scavenger is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ YanuX Scavenger is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with YanuX Scavenger.  If not, see <https://www.gnu.org/licenses/gpl.html>
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pt.unl.fct.di.novalincs.scavenger.MainActivity">
    <item
        android:id="@+id/action_wifi"
        android:orderInCategory="100"
        android:title="@string/action_wifi"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_beacon"
        android:orderInCategory="100"
        android:title="@string/action_beacon"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sensors"
        android:orderInCategory="100"
        android:title="@string/action_sensors"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_bluetooth_classic"
        android:orderInCategory="100"
        android:title="@string/action_bluetooth_classic"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_bluetooth_le"
        android:orderInCategory="100"
        android:title="@string/action_bluetooth_le"
        app:showAsAction="never" />
    <!-- TODO: Disabled until I need to set some application settings/preferences
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    -->
</menu>
