<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019 Pedro Albuquerque Santos.
  ~
  ~ This file is part of YanuX Scavenger.
  ~
  ~ YanuX Scavenger is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ YanuX Scavenger is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with YanuX Scavenger. If not, see <https://www.gnu.org/licenses/gpl.html>
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.nearby.NearbyConnectionsActivity"
    tools:showIn="@layout/activity_nearby_connections">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_nearby_connections"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/user_nickname_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/nearby_connection_user_nickname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_title" />

        <EditText
            android:id="@+id/user_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/nearby_connection_user_nickname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_nickname_label" />

        <CheckBox
            android:id="@+id/nearby_connection_advertising"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/nearby_connection_advertising"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_nickname" />

        <CheckBox
            android:id="@+id/nearby_connection_discovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/nearby_connection_discovery"
            app:layout_constraintStart_toEndOf="@+id/nearby_connection_advertising"
            app:layout_constraintTop_toBottomOf="@+id/user_nickname" />

        <Switch
            android:id="@+id/nearby_connection_on_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on"
            android:textOff="@string/off"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nearby_connection_advertising" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

