<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016 Pedro Albuquerque Santos.
  ~
  ~ This file is part of YanuX Scavenger.
  ~
  ~ YanuX Scavenger is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ YanuX Scavenger is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with YanuX Scavenger.  If not, see <https://www.gnu.org/licenses/gpl.html>
  -->

<!-- TODO: Make the scrollable to make it usable on smaller screens -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.wifi.WifiActivity">

    <Switch
        android:id="@+id/log_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/log" />

    <TextView
        android:id="@+id/log_sample_counter_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/log_switch"
        android:text="@string/log_sample_counter"
        android:visibility="visible" />

    <TextView
        android:id="@+id/log_sample_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/log_sample_counter_label"
        android:layout_marginLeft="8dp"
        android:layout_toEndOf="@+id/log_sample_counter_label" />

    <TextView
        android:id="@+id/wifi_connection_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/log_sample_counter_label"
        android:text="@string/wifi_connection_info"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/wifi_connection_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/wifi_connection_info_title"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/wifi_access_points_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/wifi_connection_info"
        android:text="@string/wifi_access_points"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/wifi_access_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/wifi_access_points_title" />

</RelativeLayout>