<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018 Pedro Albuquerque Santos.
  ~
  ~ This file is part of YanuX Scavenger.
  ~
  ~ YanuX Scavenger is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ YanuX Scavenger is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with YanuX Scavenger. If not, see <https://www.gnu.org/licenses/gpl.html>
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.bluetooth.BluetoothLeActivity"
    tools:showIn="@layout/activity_bluetooth_le">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/bluetooth_le_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/bluetooth_le_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bluetooth_le_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/bluetooth_le_address"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/bluetooth_le_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bluetooth_le_name_label"
            android:layout_alignParentStart="true"
            android:text="@string/bluetooth_le_address"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bluetooth_le_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bluetooth_le_discovery_elapsed_time"
            android:layout_alignStart="@+id/bluetooth_le_discovery_elapsed_time" />

        <TextView
            android:id="@+id/bluetooth_le_discovery_elapsed_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bluetooth_le_address_label"
            android:layout_alignParentStart="true"
            android:text="@string/bluetooth_le_discovery_elapsed_time"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bluetooth_le_discovery_elapsed_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bluetooth_le_devices_label"
            android:layout_marginLeft="8dp"
            android:layout_toEndOf="@+id/bluetooth_le_discovery_elapsed_time_label" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bluetooth_le_devices"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/bluetooth_le_devices_label"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/bluetooth_le_devices_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bluetooth_le_discovery_elapsed_time_label"
            android:layout_alignParentStart="true"
            android:text="@string/bluetooth_le_devices"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>